TS 壊れそうなのでいったんあげておく

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,9 @@
         <script src="../static/js/home/home.js" th:src="@{/js/home/home.js}"></script>
         <link href="/css/home/home.css" th:href="@{/css/home/home.css}" rel="stylesheet"></link>
         -->
+        
+        <script src="../static/js/index.js" th:src="@{/js/index.js}"></script>
+        
     </head>
     <body>
         <p>hello</p>
