--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
         <link href="/css/home/home.css" th:href="@{/css/home/home.css}" rel="stylesheet"></link>
         -->
         
-        <script src="../static/js/index.js" th:src="@{/js/index.js}"></script>
+        <script src="../static/js/main.js" th:src="@{/js/main.js}"></script>
         
     </head>
     <body>
