--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,10 +11,9 @@
         -->
         
         <script src="../static/js/main.js" th:src="@{/js/main.js}"></script>
-        
     </head>
     <body>
-        <p>hello</p>
-        <p>hello2</p>
+        <!-- <p>hello</p>
+        <p>hello2</p> -->
     </body>
 </html>
